k8s/base/tools-tietue/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toimi-tools-tietue
  namespace: apps
spec:
  selector:
    app: toimi-tools-tietue
  ports:
    - port: 80
      targetPort: 8080
